Changelog
=========


1.4.4 (unreleased)
------------------

- Nothing changed yet.


1.4.3 (2013-08-23)
------------------

- Fix generate meeting from poodle js.
- Replace jq with $.
  [mathias.leimgruber]

- Add div-element arount ics export for better css selectors
  [elioschmutz]

- ContentRelatedItems was deprecated in Plone 4.0.10 and removed aprox. in 4.2
  Use the method defined the related content viewlet.
  [mathias.leimgruber]

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]

- Fix JS toggling of meeting content.
  [treinhard]

- Avoid exception with PDF generation if 'head_of_meeting'
  (or another field that uses a vocabulary) is empty.
  [treinhard]


1.4.2 (2013-03-11)
------------------

- Replace jq by $.
  [mathias.leimgruber]

- Use local text formatting command \textbf instead of {\bf }.
  [jone]


1.4.1 (2013-01-21)
------------------

- Use safe-html-transform for textfields (Secure audit).
  [mathias.leimgruber]

- PDF: handle empty field value conversion.
  [jone]

- Workspace details PDF: do not show empty listings.
  [jone]

- Start date can not be set after end date anymore.
  [Julian Infanger]


1.4 (2012-10-16)
----------------

- Improved meeting item css and markup.
  [Julian Infanger]

- Fix translation (vcal -> ical).
  [mathias.leimgruber]

- Move start/end date after title.
  [mathias.leimgruber]

- Only auto-fill end_date if end_date is no set.
  [mathias.leimgruber]


1.3.8 (2012-08-20)
------------------

- Disable setting default page for Meeting and MeetingItem.
  Those types are not normal folders and setting the default page is therefore not common.
  [jone]

- Remove base_view from allowed Meeting views.
  [jone]


1.3.7 (2012-06-21)
------------------

- Task PDF: increase width of status column.
  [jone]


1.3.6 (2012-06-13)
------------------

- PDF: Fix newlines in task listing table.
  [jone]

- PDF: Support contacts or other objects as responsibility of tasks.
  [jone]


1.3.5 (2012-06-11)