@@ -5,7 +5,9 @@ Changelog
 1.4.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement Products.DataGridField 1.9 compatibility.
+  (use label instead of title -> https://github.com/collective/Products.DataGridField/blob/1.9.0/Products/DataGridField/SelectColumn.py#L26)
+  [mathias.leimgruber]
 
 
 1.4.3 (2013-08-23)
